Change Sidebar component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,11 @@
   "Текст": "Текст",
   "Страница не найдена": "Page Not Found",
   "Не предвиденная ошибка": "Не предвиденная ошибка",
-  "Русский": "English"
+  "Русский": "English",
+  "Главная": "Главная",
+  "О сайте": "О сайте",
+  "Короткий язык": "EN",
+  "Язык": "English",
+  "About page": "About page",
+  "Main Page": "Main Page"
 }
