--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,11 @@
   "Текст": "Текст",
   "Страница не найдена": "Страница не найдена",
   "Не предвиденная ошибка": "Не предвиденная ошибка",
-  "Русский": "Русский"
+  "Русский": "Русский",
+  "Главная": "Главная",
+  "О сайте": "О сайте",
+  "Короткий язык": "RU",
+  "Язык": "Русский",
+  "About page": "About page",
+  "Main Page": "Main Page"
 }
