--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,8 @@
   "Короткий язык": "EN",
   "Язык": "English",
   "About page": "About page",
-  "Main Page": "Main Page"
+  "Main Page": "Main Page",
+  "Войти": "Войти",
+  "Lorem Ipsum": "Lorem Ipsum",
+  "Open Modal": "Open Modal"
 }
